...
    <item
        android:id="@+id/friends"
        android:enabled="true"
        android:icon="@mipmap/ic_friend_foreground"
        android:title="My Friends"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@mipmap/ic_settings_foreground"
        android:title="More"/>
    <item
        android:id="@+id/uncheckedItem"
        android:visible="false"
        android:title="" />

</menu>
