...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword" />

    <Button
        android:id="@+id/delete"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="Delete Account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout" />

    <androidx.fragment.app.FragmentContainerView
...
